@@ -1,5 +1,6 @@
 1.3.27
 Update difficulty meter textures (Z-Tunic)
+Added: Config to change absorption heart style. Options are SHIELD, GOLD_OUTLINE, and VANILLA (#115)
 Fixed: Hearts and absorption hearts rendering incorrectly in hardcore mode (#132)
 Fixed: Sleep warning never showing
 
